# k7s

./: Cargo.toml  Dockerfile  README.md  build.rs  k9s
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benches/: sanitizer.rs
docs/: getting_started.md
fuzz/: Cargo.toml
fuzz/corpus/sanitize/: deploy.json  pod.json  secret.json
fuzz/fuzz_targets/: sanitize.rs  sanitize_structured.rs
packaging/aur/: PKGBUILD
packaging/homebrew/: k7s.rb
packaging/snap/: snapcraft.yaml
src/: error.rs  lib.rs  main.rs
src/ai/: antigravity.rs  api_client.rs  mod.rs  prompt.rs  provider.rs  session.rs  streaming.rs  token_budget.rs
src/bench/: mod.rs
src/client/: config.rs  gvr.rs  metrics.rs  mod.rs  rbac.rs  retry.rs
src/config/: alias.rs  cluster.rs  hotkey.rs  mod.rs  plugin.rs  skin.rs  views.rs  watcher.rs
src/dao/: config_map.rs  container.rs  context.rs  crd.rs  cron_job.rs  daemon_set.rs  deployment.rs  event.rs  generic.rs  helm.rs  job.rs  mod.rs  namespace.rs  node.rs  ops.rs  pod.rs  rbac.rs  registry.rs  replica_set.rs  secret.rs  service.rs  stateful_set.rs  traits.rs
src/exec/: mod.rs
src/health/: mem.rs  mod.rs
src/history/: mod.rs
src/metrics/: mod.rs
src/model/: history.rs  log.rs  mod.rs
src/portforward/: mod.rs
src/render/: alias.rs  config_map.rs  container.rs  context.rs  crd.rs  cron_job.rs  daemon_set.rs  deployment.rs  event.rs  generic.rs  helm.rs  job.rs  mod.rs  namespace.rs  node.rs  pod.rs  pv.rs  rbac.rs  replica_set.rs  secret.rs  service.rs  stateful_set.rs
src/sanitizer/: filter.rs  log_analysis.rs  log_compressor.rs  mod.rs  redactor.rs
src/ui/: app.rs  chat.rs  dialog.rs  key.rs  mod.rs  prompt.rs  splash.rs  table.rs
src/util/: clipboard.rs  fuzzy.rs  mod.rs  screen_dump.rs
src/view/: actions.rs  browser.rs  describe.rs  dir.rs  expert.rs  help.rs  log.rs  metrics.rs  mod.rs  owner.rs  pulse.rs  reference.rs  registrar.rs  workload.rs  xray.rs
src/vul/: mod.rs
src/watch/: factory.rs  mod.rs
tests/: e2e.rs  sanitizer_audit.rs  sanitizer_fuzz.rs
