[package]
name = "k7s"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Performance-focused, security-first Kubernetes TUI with AI-powered cluster analysis"
license = "Apache-2.0"
repository = "https://github.com/your-org/k7s"

[[bin]]
name = "k7s"
path = "src/main.rs"

# Library target so benchmarks and integration tests can `use k7s::…`
[lib]
name = "k7s"
path = "src/lib.rs"

[[bench]]
name = "sanitizer"
harness = false

[dependencies]
# CLI argument parsing + shell completion generation
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime — needed for K8s client and AI HTTP calls
tokio = { version = "1", features = ["full"] }

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization for config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# XDG base directory spec
dirs = "5"

# Kubernetes client
kube = { version = "0.99", features = ["client", "config", "runtime", "derive"] }
kube-core = "0.99"
k8s-openapi = { version = "0.24", features = ["v1_30"] }

# JSON value manipulation (K8s resources are JSON under the hood)
serde_json = "1"

# Async stream utilities
futures = "0.3"
tokio-stream = "0.1"

# HTTP client for LLM API
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Regex for sanitizer pattern matching
regex = "1"

# Token counting for AI context budgeting
tiktoken-rs = "0.6"

# async trait support for DAO trait objects
async-trait = "0.1"

# Ordered HashMap for log compression (preserves insertion order)
indexmap = "2"

# Date/time for rollout restart timestamps
chrono = { version = "0.4", features = ["serde"] }

# Cancellation token for graceful shutdown propagation
tokio-util = { version = "0.7", features = ["rt"] }

# Exponential backoff for retry logic
backoff = { version = "0.4", features = ["tokio"] }

# File-system event watching (config live-reload)
notify = "6"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.23"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
